Refactor + util